# geodesuka

./: CMakeLists.txt  README.md  main.cpp
assets/shader/: camera3d.frag  camera3d.vert  camera3ddr.frag  camera3ddr.vert  window.vert
doc/: geodesuka.tex  install.sh  notes.txt
inc/geodesuka/: config.h  engine.h
inc/geodesuka/builtin/app/: unit_test.h
inc/geodesuka/builtin/stage/: demo3d.h  example.h
inc/geodesuka/core/: app.h  gcl.h  graphics.h  logic.h  math.h  object_list.h  object_t.h  physics.h  sound.h  stage_list.h  stage_t.h  util.h
inc/geodesuka/core/gcl/: buffer.h  command_list.h  command_pool.h  config.h  context.h  device.h  device_list.h  image.h  pipeline.h  shader.h  swapchain.h
inc/geodesuka/core/graphics/: animation.h  material.h  mesh.h  model.h  render_operation.h
inc/geodesuka/core/hid/: mouse.h
inc/geodesuka/core/io/: image.h
inc/geodesuka/core/logic/: thread_controller.h  thread_tools.h  timer.h
inc/geodesuka/core/math/: complex.h  config.h  constants.h  field.h  field1d.h  field3d.h  func.h  matrix.h  multiply.h  quaternion.h  type.h  vec2.h  vec3.h  vec4.h
inc/geodesuka/core/object/: camera.h  camera2d.h  camera3d.h  light.h  render_target.h  system_display.h  system_terminal.h  system_window.h  virtual_window.h  window.h
inc/geodesuka/core/physics/: mesh.h
inc/geodesuka/core/stage/: canvas.h  scene3d.h
inc/geodesuka/core/util/: list.h
src/: engine.cpp
src/builtin/app/: unit_test.cpp
src/builtin/object/: triangle.cpp
src/builtin/stage/: demo3d.cpp  demo_canvas.cpp  example.cpp
src/core/: app.cpp  object_list.cpp  object_t.cpp  stage_list.cpp  stage_t.cpp
src/core/gcl/: buffer.cpp  command_list.cpp  command_pool.cpp  context.cpp  device.cpp  device_list.cpp  framebuffer.cpp  image.cpp  pipeline.cpp  shader.cpp  swapchain.cpp  variable.cpp
src/core/graphics/: animation.cpp  material.cpp  mesh.cpp  model.cpp  render_operation.cpp
src/core/io/: file.cpp
src/core/logic/: thread_tools.cpp  timer.cpp
src/core/object/: camera.cpp  camera3d.cpp  render_target.cpp  system_display.cpp  system_terminal.cpp  system_window.cpp  virtual_window.cpp  window.cpp
src/core/stage/: canvas.cpp  scene3d.cpp
src/core/util/: log.cpp  string.cpp
